--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 project(MatasanoChallenge)
 
 set (CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
 find_package (Threads)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -23,12 +24,19 @@ add_executable(runChallenge1Test challenge1/challenge1_test.cpp
 
 add_executable(runChallenge2Test challenge2/challenge2_test.cpp
                                  challenge2/challenge2.cpp
-                                 )                                                             
+                                 )                                                           
+                                 
+add_executable(runChallenge3Test challenge3/challenge3_test.cpp
+                                 challenge3/challenge3.cpp
+                                 challenge2/challenge2.cpp
+                                 )         
 
-# Link test executable against gtest & gtest_main
+
 set(LIBS gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} libbotan-2.a)
 target_link_libraries(runChallenge1Test ${LIBS})
 target_link_libraries(runChallenge2Test ${LIBS})                   
-                      
+target_link_libraries(runChallenge3Test ${LIBS})                   
+
 add_test( runChallenge1Test runChallenge1Test )
 add_test( runChallenge2Test runChallenge2Test )
+add_test( runChallenge3Test runChallenge3Test )
