--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,14 +29,22 @@ add_executable(runChallenge2Test challenge2/challenge2_test.cpp
 add_executable(runChallenge3Test challenge3/challenge3_test.cpp
                                  challenge3/challenge3.cpp
                                  challenge2/challenge2.cpp
-                                 )         
+                                 )
+                                 
+add_executable(runChallenge4Test challenge4/challenge4_test.cpp
+                                 challenge4/challenge4.cpp
+                                 challenge3/challenge3.cpp
+                                 challenge2/challenge2.cpp
+                                 )
 
 
 set(LIBS gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} libbotan-2.a)
 target_link_libraries(runChallenge1Test ${LIBS})
 target_link_libraries(runChallenge2Test ${LIBS})                   
-target_link_libraries(runChallenge3Test ${LIBS})                   
+target_link_libraries(runChallenge3Test ${LIBS})
+target_link_libraries(runChallenge4Test ${LIBS})                   
 
 add_test( runChallenge1Test runChallenge1Test )
 add_test( runChallenge2Test runChallenge2Test )
 add_test( runChallenge3Test runChallenge3Test )
+add_test( runChallenge4Test runChallenge4Test )
