--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,10 @@ add_executable(runChallenge6Test challenge6/challenge6_test.cpp
                                  challenge2/challenge2.cpp
                                  )
 
-
+add_executable(runChallenge7Test challenge7/challenge7_test.cpp
+                                 challenge7/challenge7.cpp
+                                 helpers/tools_file.cpp
+                                 )
 
 set(LIBS gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} libbotan-2.a)
 target_link_libraries(runChallenge1Test ${LIBS})
@@ -57,6 +60,7 @@ target_link_libraries(runChallenge3Test ${LIBS})
 target_link_libraries(runChallenge4Test ${LIBS})                   
 target_link_libraries(runChallenge5Test ${LIBS})                   
 target_link_libraries(runChallenge6Test ${LIBS})                   
+target_link_libraries(runChallenge7Test ${LIBS})
 
 add_test( runChallenge1Test runChallenge1Test )
 add_test( runChallenge2Test runChallenge2Test )
@@ -64,3 +68,4 @@ add_test( runChallenge3Test runChallenge3Test )
 add_test( runChallenge4Test runChallenge4Test )
 add_test( runChallenge5Test runChallenge5Test )
 add_test( runChallenge6Test runChallenge6Test )
+add_test( runChallenge7Test runChallenge7Test )
