--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,11 @@ add_executable(runChallenge7Test challenge7/challenge7_test.cpp
                                  helpers/tools_file.cpp
                                  )
 
+add_executable(runChallenge8Test challenge8/challenge8_test.cpp
+                                 challenge8/challenge8.cpp
+                                 helpers/tools_file.cpp
+                                 )
+
 set(LIBS gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} libbotan-2.a)
 target_link_libraries(runChallenge1Test ${LIBS})
 target_link_libraries(runChallenge2Test ${LIBS})                   
@@ -61,6 +66,7 @@ target_link_libraries(runChallenge4Test ${LIBS})
 target_link_libraries(runChallenge5Test ${LIBS})                   
 target_link_libraries(runChallenge6Test ${LIBS})                   
 target_link_libraries(runChallenge7Test ${LIBS})
+target_link_libraries(runChallenge8Test ${LIBS})
 
 add_test( runChallenge1Test runChallenge1Test )
 add_test( runChallenge2Test runChallenge2Test )
@@ -69,3 +75,4 @@ add_test( runChallenge4Test runChallenge4Test )
 add_test( runChallenge5Test runChallenge5Test )
 add_test( runChallenge6Test runChallenge6Test )
 add_test( runChallenge7Test runChallenge7Test )
+add_test( runChallenge8Test runChallenge8Test )
